# railblock

./: CONTRIBUTING.md  LICENSES.md  README.md
firmware/: Cargo.toml  build.rs
firmware/src/: accessory.rs  can_id.rs  gpio_interrupt.rs  lib.rs
hardware/: fp-info-cache  fp-lib-table  railblock.kicad_pcb  railblock.kicad_prl  railblock.kicad_pro  railblock.kicad_sch  sym-lib-table
hardware/awesome-kicad-library/: README.md  awesome.kicad_sym
hardware/awesome-kicad-library/awesome.pretty/: 02x03MicroMatch.kicad_mod  Bosch_LGA-8.kicad_mod  EKMC1604111.kicad_mod  ESP32-WROOM-32.kicad_mod  PinHeader_2x03_P2.54mm_Vertical.kicad_mod  PinHeader_2x05_P1.27mm_Vertical_SMD.kicad_mod  QFN-NRF52832.kicad_mod  QFN40P700X700X90-57T400N.kicad_mod  QFN50P500X500X90-33N.kicad_mod  RESCAXE80P320X160X70-8N.kicad_mod  RS232-Debug.kicad_mod  SCD30.kicad_mod  VEML7700.kicad_mod  WAGO250-203.kicad_mod  WAGO250-204.kicad_mod  WAGO250-205.kicad_mod  WAGO250-208.kicad_mod  WAGO2604-1102.kicad_mod  WAGO2604-1103.kicad_mod  WAGO2604-1104.kicad_mod  WAGO2604-1106.kicad_mod  WAGO2604-1108.kicad_mod  (+3 more)
hardware/fab/: railblock-B_Cu.gbr  railblock-B_Mask.gbr  railblock-B_Paste.gbr  railblock-B_Silkscreen.gbr  railblock-Edge_Cuts.gbr  railblock-F_Cu.gbr  railblock-F_Mask.gbr  railblock-F_Paste.gbr  railblock-F_Silkscreen.gbr  railblock-NPTH.drl  railblock-PTH.drl  railblock-bottom.pos  railblock-job.gbrjob  railblock-top.pos  railblock.csv  railblock.xlsx
railblock/src/: accessory.rs  button.rs  can.rs  can_id.rs  cli.rs  config.rs  error.rs  helper.rs
software/: CMakeLists.txt  sdkconfig
software/main/: Button.cpp  Button.hpp  CAN.cpp  CAN.hpp  CMakeLists.txt  Console.cpp  Console.hpp  ConsoleCommandDevice.cpp  ConsoleCommandDevice.hpp  Device.cpp  Device.hpp  ICAN.hpp  LICENSE  PinConfig.cpp  PinConfig.hpp  Relais.cpp  Relais.hpp  Selftest.cpp  Selftest.hpp  Update.cpp  Update.hpp  button.h  cmd_device.h  cmd_nvs.h  cmd_system.c  main.cpp
(+5 files in other folders)
